--- a/new/Info.plist
+++ b/new/Info.plist
@@ -46,5 +46,11 @@
 		<string>Delm-Medium.otf</string>
 		<string>ThirstySoftRegular.otf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Autoriser</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Autoriser</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Ajout photo</string>
 </dict>
 </plist>
