--- a/Instagrid/supportingFile/Info.plist
+++ b/Instagrid/supportingFile/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Instagrid</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -20,6 +22,17 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Autoriser</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Autoriser</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Ajout photo</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Delm-Medium.otf</string>
+		<string>ThirstySoftRegular.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,16 +54,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Delm-Medium.otf</string>
-		<string>ThirstySoftRegular.otf</string>
-	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>Autoriser</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>Autoriser</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Ajout photo</string>
 </dict>
 </plist>
